[tool.poetry]
name = "openscm-calibration-examples"
version = "0.1.0"
description = "Examples using OpenSCM-Calibration"
authors = ["Zebedee Nicholls <zebedee.nicholls@climate-energy-college.org>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "openscm_calibration_examples"}]

[tool.poetry.dependencies]
python = "^3.9"
openscm-calibration = { version = "^0.5.0", extras = ["notebooks", "plots"] }
jupytext = "^1.14.5"

[tool.poetry.group.tests.dependencies]
nbmake = "^1.4.1"
pytest = "^7.3.1"
pytest-xdist = "^3.2.1"


[tool.poetry.group.docs.dependencies]
jupyter-book = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext]
formats = "ipynb,myst"
